[gd_scene load_steps=19 format=2]

[ext_resource path="res://textures/Player.png" type="Texture" id=1]
[ext_resource path="res://scripts/ShakeyCam.gd" type="Script" id=2]
[ext_resource path="res://monogram_extended.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://MonogramSmall.tres" type="DynamicFont" id=5]
[ext_resource path="res://Clear.theme" type="Theme" id=6]
[ext_resource path="res://sounds/Music/Pluto.ogg" type="AudioStream" id=7]
[ext_resource path="res://scripts/ToggleSound.gd" type="Script" id=8]
[ext_resource path="res://textures/Sound1.png" type="Texture" id=9]
[ext_resource path="res://textures/Grabber1.png" type="Texture" id=10]
[ext_resource path="res://textures/Bar.png" type="Texture" id=11]
[ext_resource path="res://scripts/RichTextLabel.gd" type="Script" id=12]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 16, 8 )
margin_left = 8.0
margin_right = 8.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 16, 48 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0

[sub_resource type="Theme" id=3]
RichTextLabel/colors/default_color = Color( 1, 1, 1, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 1 )
VScrollBar/styles/grabber_pressed = SubResource( 1 )
VScrollBar/styles/scroll = SubResource( 2 )
VScrollBar/styles/scroll_focus = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.278431, 0.176471, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 140.561, 110.54 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="Center" type="CenterContainer" parent="Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = -8.0
margin_right = 82.5
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Sprite/Center"]
margin_left = 87.0
margin_top = 13.0
margin_right = 93.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="TextContainer" type="Node2D" parent="."]
position = Vector2( 0, 600 )

[node name="Credits" type="RichTextLabel" parent="TextContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 219.08
margin_bottom = 243.0
custom_colors/default_color = Color( 0.811765, 0.776471, 0.721569, 1 )
bbcode_enabled = true
bbcode_text = "[center]Prismatic Wizardry[/center]
This game was made by me (Peatral) during the Miz Jam 1. I have to thank my brother and my good friend for the support.

Music:
Soundtrack by ColossalWreck under CC0

Font:
Monogram by datagoblin under CC0"
text = "Prismatic Wizardry
This game was made by me (Peatral) during the Miz Jam 1. I have to thank my brother and my good friend for the support.

Music:
Soundtrack by ColossalWreck under CC0

Font:
Monogram by datagoblin under CC0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer2" type="Node2D" parent="."]
position = Vector2( 0, -600 )

[node name="Tutorial" type="RichTextLabel" parent="TextContainer2"]
modulate = Color( 0.811765, 0.776471, 0.721569, 1 )
margin_left = 30.0
margin_top = 20.0
margin_right = 219.08
margin_bottom = 243.0
focus_neighbour_right = NodePath("../../UI/MainMenu/CenterContainer/Menu/HBox2/Help")
focus_mode = 2
theme = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "Dimdrabs goal is not only to survive, but also to score the best he can. 
If he stays in one spot for too long, the dark spirits will sooner or later all know where he is and hunt him down. Altough this will sooner or later happen nontheless. 
When he wants to cast a spell he has to concentrate to aim, so he locks in place when pressing LB. The he can aim with the left stick, the one he also uses to walk. He is able to cast a spell only if he locks, this is done by pressing the face buttons (A, B, X, Y). They match the color an enemy has to be hit with (There is a visual aid in the bottom right corner of the HUD).
When he fights against spirits successfully, the combo counter does increase to a maximum of 10. The combo gets stopped when he gets hit or if he hits an enemy with the wrong spell.
"
text = "Dimdrabs goal is not only to survive, but also to score the best he can. 
If he stays in one spot for too long, the dark spirits will sooner or later all know where he is and hunt him down. Altough this will sooner or later happen nontheless. 
When he wants to cast a spell he has to concentrate to aim, so he locks in place when pressing LB. The he can aim with the left stick, the one he also uses to walk. He is able to cast a spell only if he locks, this is done by pressing the face buttons (A, B, X, Y). They match the color an enemy has to be hit with (There is a visual aid in the bottom right corner of the HUD).
When he fights against spirits successfully, the combo counter does increase to a maximum of 10. The combo gets stopped when he gets hit or if he hits an enemy with the wrong spell.
"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.749153
margin_right = -0.749146
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGMusic" type="AudioStreamPlayer" parent="UI/MainMenu"]
stream = ExtResource( 7 )
bus = "Music"

[node name="Title" type="Label" parent="UI/MainMenu"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Prismatic
Wizardry"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI/MainMenu"]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = -1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Label" parent="UI/MainMenu/CenterContainer"]
margin_left = 159.0
margin_top = 155.0
margin_right = 321.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Press any Key to enter Menu"

[node name="Animations" type="AnimationPlayer" parent="UI/MainMenu/CenterContainer/Start"]
autoplay = "Blink"
anims/Blink = SubResource( 5 )

[node name="Menu" type="VBoxContainer" parent="UI/MainMenu/CenterContainer"]
visible = false
margin_left = 60.0
margin_top = 67.0
margin_right = 420.0
margin_bottom = 255.0
custom_constants/separation = 0

[node name="Story" type="RichTextLabel" parent="UI/MainMenu/CenterContainer/Menu"]
margin_right = 360.0
margin_bottom = 104.682
rect_min_size = Vector2( 360, 104.682 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.811765, 0.776471, 0.721569, 1 )
bbcode_enabled = true
bbcode_text = "Dimdrab is a mage who lost his way in the dark forest. At night the evil spirits are awakened and try to end his life. Now he has to fight them with his specialized spells.

[color=red]Also because he knew that a gamepad would be way better, he didn't even care to implement controls for keyboard and mouse...[/color]"
text = "Dimdrab is a mage who lost his way in the dark forest. At night the evil spirits are awakened and try to end his life. Now he has to fight them with his specialized spells.

Also because he knew that a gamepad would be way better, he didn't even care to implement controls for keyboard and mouse..."

[node name="HBox" type="HBoxContainer" parent="UI/MainMenu/CenterContainer/Menu"]
margin_top = 104.0
margin_right = 360.0
margin_bottom = 130.0
custom_constants/separation = 90
alignment = 1

[node name="Enter" type="Button" parent="UI/MainMenu/CenterContainer/Menu/HBox"]
margin_left = 33.0
margin_right = 177.0
margin_bottom = 26.0
focus_neighbour_right = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../../HBox2/Help")
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 6 )
text = "Enter forest"

[node name="Quit" type="Button" parent="UI/MainMenu/CenterContainer/Menu/HBox"]
margin_left = 267.0
margin_right = 327.0
margin_bottom = 26.0
focus_neighbour_left = NodePath("../Enter")
focus_neighbour_bottom = NodePath("../../HBox2/Credits")
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 6 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox2" type="HBoxContainer" parent="UI/MainMenu/CenterContainer/Menu"]
margin_top = 130.0
margin_right = 360.0
margin_bottom = 156.0
custom_constants/separation = 38
alignment = 1

[node name="Help" type="Button" parent="UI/MainMenu/CenterContainer/Menu/HBox2"]
margin_left = 11.0
margin_right = 227.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../../HBox/Enter")
focus_neighbour_right = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../../ToggleSound")
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 6 )
text = "I forgot my spells"

[node name="Credits" type="Button" parent="UI/MainMenu/CenterContainer/Menu/HBox2"]
margin_left = 265.0
margin_right = 349.0
margin_bottom = 26.0
focus_neighbour_left = NodePath("../Help")
focus_neighbour_top = NodePath("../../HBox/Quit")
focus_neighbour_bottom = NodePath("../../ToggleSound")
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 6 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleSound" type="TextureButton" parent="UI/MainMenu/CenterContainer/Menu"]
margin_top = 156.0
margin_right = 360.0
margin_bottom = 188.0
rect_min_size = Vector2( 32, 32 )
focus_neighbour_left = NodePath("../HBox2/Help")
focus_neighbour_top = NodePath("../HBox2/Help")
focus_neighbour_right = NodePath("../HBox2/Credits")
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
script = ExtResource( 8 )
[connection signal="tween_completed" from="Camera2D/Tween" to="Camera2D" method="onTweenCompleted"]
[connection signal="pressed" from="UI/MainMenu/CenterContainer/Menu/HBox/Enter" to="UI/MainMenu" method="onEnterPressed"]
[connection signal="pressed" from="UI/MainMenu/CenterContainer/Menu/HBox/Quit" to="UI/MainMenu" method="onQuitPressed"]
[connection signal="pressed" from="UI/MainMenu/CenterContainer/Menu/HBox2/Help" to="UI/MainMenu" method="onHelpPressed"]
[connection signal="pressed" from="UI/MainMenu/CenterContainer/Menu/HBox2/Credits" to="UI/MainMenu" method="onCreditsPressed"]
